[gd_scene load_steps=11 format=3 uid="uid://cdep4tr33absd"]

[ext_resource type="Theme" uid="uid://c8f0qsywcxaql" path="res://theme.tres" id="1_5q2at"]
[ext_resource type="Script" path="res://scenes/Menu/MainMenu.gd" id="2_de2p0"]
[ext_resource type="Texture2D" uid="uid://bgf00ftgaycwq" path="res://assets/Background/game-element-template-design-set/BrightForest.png" id="3_nodmb"]
[ext_resource type="PackedScene" uid="uid://b1svk6m7jhvse" path="res://scenes/Menu/banner.tscn" id="4_odt08"]
[ext_resource type="PackedScene" uid="uid://b4uyws5r0r76f" path="res://scenes/Menu/Menu.tscn" id="5_wx6n4"]
[ext_resource type="PackedScene" uid="uid://cuh8pj245mgas" path="res://scenes/Menu/Credits.tscn" id="6_uwyw1"]
[ext_resource type="PackedScene" uid="uid://d2a6gfd1cildk" path="res://scenes/Menu/ChooseGameMode.tscn" id="7_6f18a"]
[ext_resource type="PackedScene" uid="uid://djtmkg12f8h7c" path="res://scenes/Popups/Settings.tscn" id="8_ak8ep"]
[ext_resource type="PackedScene" uid="uid://dxuerlu0buwg5" path="res://scenes/Popups/SavePopup.tscn" id="9_310sy"]
[ext_resource type="Texture2D" uid="uid://cktt68qkxost4" path="res://assets/CustomTheme/Original/X.png" id="10_qi0xs"]

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5q2at")
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("2_de2p0")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_nodmb")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Banner" parent="Margin/VBox" instance=ExtResource("4_odt08")]
layout_mode = 2

[node name="Center" type="MarginContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Menu" parent="Margin/VBox/Center" instance=ExtResource("5_wx6n4")]
layout_mode = 2

[node name="Credits" parent="Margin/VBox/Center" instance=ExtResource("6_uwyw1")]
visible = false
layout_mode = 2

[node name="ChooseGameMode" parent="Margin/VBox/Center" instance=ExtResource("7_6f18a")]
visible = false
layout_mode = 2

[node name="Settings" parent="Margin/VBox/Center" instance=ExtResource("8_ak8ep")]
visible = false
layout_mode = 2

[node name="SavePopup" parent="Margin/VBox/Center" instance=ExtResource("9_310sy")]
visible = false
layout_mode = 2
DirectLoadOnPress = true

[node name="Return" type="TextureButton" parent="Margin/VBox/Center"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("10_qi0xs")

[connection signal="b_continue" from="Margin/VBox/Center/Menu" to="." method="_on_main_menu_b_continue"]
[connection signal="b_credits" from="Margin/VBox/Center/Menu" to="." method="_on_main_menu_b_credits"]
[connection signal="b_highscore" from="Margin/VBox/Center/Menu" to="." method="_on_main_menu_b_highscore"]
[connection signal="b_play" from="Margin/VBox/Center/Menu" to="." method="_on_main_menu_b_play"]
[connection signal="b_settings" from="Margin/VBox/Center/Menu" to="." method="_on_main_menu_b_settings"]
[connection signal="b_tutorial" from="Margin/VBox/Center/Menu" to="." method="_on_main_menu_b_tutorial"]
[connection signal="casual" from="Margin/VBox/Center/ChooseGameMode" to="." method="_on_choose_game_mode_casual"]
[connection signal="custom_mode" from="Margin/VBox/Center/ChooseGameMode" to="." method="_on_choose_game_mode_custom_mode"]
[connection signal="four_seasons" from="Margin/VBox/Center/ChooseGameMode" to="." method="_on_choose_game_mode_four_seasons"]
[connection signal="time_rush" from="Margin/VBox/Center/ChooseGameMode" to="." method="_on_choose_game_mode_time_rush"]
[connection signal="pressed" from="Margin/VBox/Center/Return" to="." method="_on_return_pressed"]
